feat(auth-service): Adding jwt_user_auth
